[gd_scene load_steps=9 format=2]

[ext_resource path="res://Menu/menu_button.png" type="Texture" id=1]
[ext_resource path="res://Menu/Demo_ConeriaScript.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes-Jordan/MenuScene.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes-Martin/Scripts-Martin/menu.gd" type="Script" id=4]
[ext_resource path="res://Music/sc_ambiance.ogg" type="AudioStream" id=5]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 85.4508

[sub_resource type="DynamicFont" id=3]
size = 45
font_data = ExtResource( 2 )

[node name="menu" type="Node"]
script = ExtResource( 4 )

[node name="Spatial" parent="." instance=ExtResource( 3 )]

[node name="Node2D" type="Node2D" parent="."]

[node name="Play" type="Area2D" parent="Node2D"]

[node name="circle" type="Sprite" parent="Node2D/Play"]
material = SubResource( 1 )
position = Vector2( 986.844, 314.661 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Play"]
position = Vector2( 986, 312 )
shape = SubResource( 2 )
one_way_collision = true

[node name="Quit" type="Area2D" parent="Node2D"]
position = Vector2( 1.88782, 366.223 )

[node name="circle" type="Sprite" parent="Node2D/Quit"]
material = SubResource( 1 )
position = Vector2( 988.519, 313.706 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Quit"]
position = Vector2( 986, 312 )
shape = SubResource( 2 )
one_way_collision = true

[node name="Label" type="Label" parent="Node2D"]
margin_left = 938.626
margin_top = 288.746
margin_right = 1338.63
margin_bottom = 1088.75
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.921569, 0, 1, 1 )
custom_colors/font_color_shadow = Color( 0.780392, 0, 1, 1 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Node2D"]
margin_left = 948.076
margin_top = 657.929
margin_right = 1348.08
margin_bottom = 1457.93
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.992157, 0, 1, 1 )
custom_colors/font_color_shadow = Color( 0.921569, 0, 1, 1 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sc_ambiance" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true
bus = "Background"
[connection signal="mouse_entered" from="Node2D/Play" to="." method="_on_Play_mouse_entered"]
[connection signal="mouse_exited" from="Node2D/Play" to="." method="_on_Play_mouse_exited"]
[connection signal="mouse_entered" from="Node2D/Quit" to="." method="_on_Quit_mouse_entered"]
[connection signal="mouse_exited" from="Node2D/Quit" to="." method="_on_Quit_mouse_exited"]
